@@ -1,3 +1,7 @@
+2005-09-10  Juan J. Merelo Guervós  <jmerelo@geneura.ugr.es>
+
+	* "length" tag added, thanks to Juan Schwindt. Deleted "Podcast" from comment.
+
 Revision history for Perl extension MP3::Podcast.
 
 0.01  Tue Apr 12 14:01:20 2005
